# -distinguish_majiang

./: CMakeLists.txt  README.md  main.cpp
maj/: CMakeLists.txt  main.cpp
