cmake_minimum_required(VERSION 3.10)
project(TEST_OpenCV)
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}" -g -O2)
find_package(OpenCV 4 REQUIRED)
add_executable(shuang main.cpp)
#add_executable(po main_revolve.cpp)
#add_executable(feng opencv_1_teaching.cpp)
#add_executable(feng juan.cpp)
#add_executable(open_img open_create_img.cpp)
#/add_executable(threshold Threshold.cpp)
link_directories(${OpenCV_LIBARARY_DIRS})
# opencv libraries
target_link_libraries(shuang ${OpenCV_LIBS})
#target_link_libraries(feng ${OpenCV_LIBS})
#target_link_libraries(po ${OpenCV_LIBS})